--- a/CurrencyConverter/pom.xml
+++ b/CurrencyConverter/pom.xml
@@ -7,12 +7,14 @@
   <artifactId>CurrencyConverter</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <name>CurrencyConverter</name>
   <url>http://maven.apache.org</url>
-
   <properties>
+    <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+
   </properties>
 
   <dependencies>
